# WBS-SucheA-A1

./: .gitignore  README.md  documentation.tex
Testing/: test1.xlsx  test2.xlsx  test3.xlsx
src/: CMakeLists.txt  Makefile  main.cpp
src/data/Testing/: test1.csv  test1.txt  test2.csv  test2.txt  test3.csv  test3.txt
src/lib/: Artefact.cpp  Artefact.h  Artifact.cpp  Artifact.h  Component.cpp  Component.h  Helper.cpp  Helper.h  Playground.cpp  Playground.h  PriorityQueue.cpp  PriorityQueue.h  State.cpp  State.h
